just about finished

--- a/sunday-farm-static/what-we-do.html
+++ b/sunday-farm-static/what-we-do.html
@@ -100,7 +100,8 @@
             <ul class="checklist">
               <li>
                 <span class="check emerald" aria-hidden="true"></span>
-                <p><strong>Children transformed by Christ</strong> who understand their purpose and know themselves through God’s eyes.</p>
+                <p><strong>Children transformed by Christ</strong> To create a place where children heal, live, grow and learn how to be people who are led by the Holy Spirit; and grow to be disciples of Jesus.
+                  </p>
               </li>
               <li>
                 <span class="check emerald" aria-hidden="true"></span>
@@ -155,7 +156,8 @@
               </svg>
             </div>
             <h3 class="h4">Parent &amp; Caregiver Support</h3>
-            <p>Comprehensive support services that equip and encourage parents and caregivers as they care for children who’ve experienced trauma.</p>
+            <p> Respite care, emotional support, Christ-centered community, and practical resources.
+            </p>
             <ul class="mini-checklist olive">
               <li>Respite care services</li>
               <li>Emotional &amp; spiritual support</li>
@@ -184,7 +186,7 @@
         </div>
 
         <div class="center mt-24">
-          <a class="btn btn-emerald-lg" href="contact.html" aria-label="Start Intake Process">
+          <a class="btn btn-emerald-lg" href="https://form.jotform.com/253025754859062" aria-label="Start Intake Process">
             <span class="inline-flex gap-8 align-center">
               Start Intake Process
               <!-- Arrow Right -->
