thank you redirect

--- a/sunday-farm-static/contact.html
+++ b/sunday-farm-static/contact.html
@@ -121,6 +121,8 @@
           
             <button type="submit" class="btn btn-emerald-lg" aria-label="Submit contact form">Send Message</button>
             <p class="tiny muted center" style="margin-top:10px;">* Required fields</p>
+            <input type="hidden" name="_redirect" value="https://YOUR-PAGES-URL/thank-you.html">
+
           </form>
           
           </div>
