fix the hamburger menu

--- a/thank-you.html
+++ b/thank-you.html
@@ -90,6 +90,14 @@
 
   <script>
     document.getElementById('year').textContent = new Date().getFullYear();
+   
+    function toggleMenu() {
+     const navList = document.getElementById("nav-menu");
+      const toggleButton = document.querySelector(".menu-toggle");
+      const isOpen = navList.classList.toggle("is-open");
+     toggleButton.setAttribute("aria-expanded", isOpen);
+    }
+  
   </script>
 </body>
 </html>
