--- a/contact.html
+++ b/contact.html
@@ -290,24 +290,17 @@
     </div>
 </footer>
 
-  
-  <!-- Minimal form handler
-  <script>
-    (function () {
-      const form = document.getElementById('contact-form');
-      const success = document.getElementById('form-success');
 
-      if (form) {
-        form.addEventListener('submit', function (e) {
-          e.preventDefault();
-          // Normally you'd POST to your backend here
-          success.style.display = 'block';
-          form.reset();
-          setTimeout(() => { success.style.display = 'none'; }, 5000);
-        });
-      }
-    }());
-  </script> -->
+    <script>
+    function toggleMenu() {
+     const navList = document.getElementById("nav-menu");
+      const toggleButton = document.querySelector(".menu-toggle");
+      const isOpen = navList.classList.toggle("is-open");
+     toggleButton.setAttribute("aria-expanded", isOpen);
+    }
+  </script>
+
+
  
 
   <script src="script.js" defer></script>
